CMAKE_MINIMUM_REQUIRED(VERSION 3.29)
PROJECT(NTV VERSION 1.0.0 LANGUAGES CXX)
SET(BIN_TARGET ntv)
SET(CMAKE_CXX_STANDARD 26)

SET(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_HOME}/scripts/buildsystems/vcpkg.cmake)
SET(DEPENDENCY_LOCAL_DIR $ENV{VCPKG_HOME}/installed/x64-windows)
SET(CMAKE_PREFIX_PATH ${DEPENDENCY_LOCAL_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

FILE(GLOB_RECURSE SOURCE_FILES ${PROJECT_SOURCE_DIR}/source/*.cc)
FILE(GLOB_RECURSE HEADER_FILES ${PROJECT_SOURCE_DIR}/include/*.hh)
ADD_EXECUTABLE(${BIN_TARGET} main.cc ${SOURCE_FILES} ${HEADER_FILES})

INCLUDE(cmake/load-pcap.cmake)
INCLUDE(cmake/load-json.cmake)

INCLUDE(cmake/packaging.cmake)
INCLUDE(cmake/install.cmake)
INCLUDE(cmake/test.cmake)